# basic-shell

./: .gitignore  LICENSE  README.md  datac.json  pyproject.toml  setup.py  version.py
basic-shell/: .gitignore  __init__.py  run.py
basic-shell/kernel/: cmds.py  utils.py  version.py
basicshell/: run.py
basicshell/kernel/: cmds.py  utils.py
basicshell/tools/: error.py  pipes.py  text_editor.py
kernel/: cmds.py
src/basicshell/: __main__.py  version.py
src/basicshell/kernel/: cmds.py  utils.py
src/basicshell/tools/: error.py  pipes.py
