# pyproject.toml

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "basicshell"
version = "0.1.1"
description = "A basic shell"
readme = "README.md"
authors = [
  { name="potato-pack"},
]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["python", "shell", "basic"]

dependencies = [
    "click",
    "prompt_toolkit",
    'pwinput',
    'colorama',
    'pyttsx3',
]


[project.urls]
Homepage = "https://github.com/potato-pack/basic-shell/"

[project.scripts]
basicshell = "basicshell.__main__:main"
